--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "diguri shaikshavali <shaikshavali191020001@gmail.com.com>",
   "main": "code.js",
   "license": "MIT",
-  "repository": "",
+  "repository": "https://github.com/shaiksha19/digurishaiksha.git",
   "scripts": {
     "start": "node code.js"
   },
